--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,5 +22,8 @@
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	{{ "<![endif]-->" | safeHTML }}
+
+	<!-- RSS -->
+	<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 </head>
 <body class="{{ .Site.Params.colorScheme }}">
