Added a social icons section to the sidebar
[[menu.icons]] can now be used to specify icons that will be displayed
after the site's description, but before the main menu items.

--- a/layouts/partials/sidebar-content.html
+++ b/layouts/partials/sidebar-content.html
@@ -10,11 +10,17 @@
 		</div>
 		{{ end }}
 
+		<ul class="sidebar-menus sidebar-icons">
+                  {{ range .Site.Menus.icons }}
+                    <li><a href="{{.URL}}">{{ .Post }}</a></li>
+                  {{end}}
+                </ul>
+
 		<ul class="sidebar-menus">
-			{{ range .Site.Menus.main }}
-				<li>&#187; <a href="{{.URL}}">{{ .Name }}</a> {{ .Post }}</li>
-			{{end}}
-		</ul>
+                  {{ range .Site.Menus.main }}
+                    <li>&#187; <a href="{{.URL}}">{{ .Name }}</a>{{ .Post }}</li>
+                  {{end}}
+                </ul>
 
 		<div class="sidebar-recent hidden-xs">
 			<p>Recent Posts:</p>
